--- a/css/style.css
+++ b/css/style.css
@@ -254,9 +254,9 @@ body._lock {
 	.menu__body._active {
 		left: 0;
 	}
-	.menu__body._active::before {
+	.menu__body::before {
 		content: '';
-		position: fixed;
+		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
