--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ html, body {
 	height: 100%;
 	line-height: 1;
 }
+::-webkit-scrollbar {
+	width: 0;
+}
 
 body {
 	font-family: Rubik;
@@ -23,6 +26,47 @@ body {
 }
 body._lock {
 	overflow: hidden;
+}
+
+.scroller {
+	position: fixed;
+	z-index: 50;
+	top: 0;
+	right: 0;
+	width: 10px;
+}
+.scroller-white {
+	height: 100%;
+	background: rgba(255, 255, 255, 0.05);
+}
+.scroller-white::before, .scroller-white::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+.scroller-white::before {
+	filter: blur(10px);
+}
+.scroller-white::after {
+	filter: blur(30px);
+}
+.scroller-gradient {
+	border-radius: 0 0 10px 10px;
+	animation: animate 5s linear infinite;
+}
+.scroller-gradient, .scroller-white::before, .scroller-white::after {
+	background: linear-gradient(to top, #008aff, #00ffe7);
+}
+@keyframes animate {
+	0%, 100% {
+		filter: hue-rotate(0deg);
+	}
+	50% {
+		filter: hue-rotate(360deg);
+	}
 }
 
 .wrapper {
@@ -288,7 +332,7 @@ body._lock {
 .page__healthcare {}
 
 .main-block {
-	background-color: #fafbfd;
+	background-color: #fafbfd; /* ! */
 }
 .main-block__container {}
 .main-block__body {
@@ -416,7 +460,7 @@ body._lock {
 	left: 12px;
 	width: 206px;
 	height: 27px;
-	background-color: rgba(240, 240, 240, 0.49);
+	background-color: rgba(240, 240, 240, 0.49); /* ! */
 	border-radius: 16px;
 }
 .media-stay-safe__square-1 {
@@ -467,7 +511,7 @@ body._lock {
 }
 
 .experts {
-	background-color: #fafbfd;
+	background-color: #fafbfd; /* ! */
 	padding: 110px 0px;
 }
 .experts__container {}
@@ -498,7 +542,7 @@ body._lock {
 	justify-content: center;
 	border-radius: 16px;
 	box-shadow: 0px 2px 24px rgba(88, 126, 236, 0.15);
-	background-color: #fff;
+	background-color: #fff; /* ! */
 	padding: 28px 50px;
 }
 .statistics-experts__item {
@@ -628,7 +672,7 @@ body._lock {
 	letter-spacing: 0.08em;
 	border-radius: 8px;
 	box-shadow: 0px 4px 18px rgba(88, 126, 236, 0.18);
-	background-color: #fff;
+	background-color: #fff; /* ! */
 	padding: 37px 27px;
 }
 .item-healthcare__icon {}
